# ticket-system

./: .gitignore  README.md  db_setup.py  pyproject.toml  run.py  ticket-system.py
smart_ticket/: __init__.py  filters.py  forms.py  models.py  routes.py  smart_ticket.db
smart_ticket/admin_bp/: forms.py  routes.py
smart_ticket/admin_bp/templates/admin_bp/: admin_tools.html  administrator_tools.html  ticket_administration.html  user_administration.html
smart_ticket/admin_bp/templates/admin_bp/includes/: deactivate_user_modal.html  ticket_modals.html  user_modals.html
smart_ticket/auth/: routes.py
smart_ticket/email/: email_settings.json  passwords.json.example  send_email.py
smart_ticket/static/: main.css
smart_ticket/static/js/ckeditor/: build-config.js  ckeditor.js
smart_ticket/templates/: about.html  archive.html  base.html  create_ticket.html  index.html  login.html  registration.html  ticket_detail.html  ticket_list.html  user_detail.html
smart_ticket/templates/includes/: solve_modal.html
smart_ticket/ticket_bp/: forms.py  routes.py
smart_ticket/ticket_bp/templates/ticket_bp/: archive.html  create_ticket.html  ticket_detail.html  ticket_list.html
smart_ticket/user/: forms.py  routes.py
smart_ticket/user/templates/user_blueprint/: login.html  user_detail.html
smart_ticket/user/templates/user_bp/: login.html
smart_ticket/user_bp/: forms.py  routes.py
smart_ticket/user_bp/templates/user_bp/: landing.html  login.html  registration.html  reset_password.html  update_user.html  user_detail.html
templates/: about.html  base.html  index.html
(+8 files in other folders)
