[tool.poetry]
name = "ticket-system"
version = "0.1.0"
description = ""
authors = ["Jakub Rutrle <rutrle@seznam.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
Werkzeug = "2.0.3"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Bcrypt = "^0.7.1"
WTForms = "^3.0.1"
Flask-WTF = "^1.0.0"
email-validator = "^1.1.3"
Flask-Login = "^0.5.0"
Flask-CKEditor = "^0.4.6"
phonenumbers = "^8.12.46"
Pillow = "^9.1.0"
Faker = "^13.7.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
